# gastar

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE  README.md
assets/: demo.webm
gastar/: gastar.cpp  gastar.hpp
test/: main.cpp
